--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -1,18 +1,14 @@
 <%= form_for(@persona) do |f| %>
 <%= render 'layouts/errores', :x=>@persona %>
-    </ul>
-</div>
-<% end %>
-  <div class="alert alert-danger alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert">
-      <span aria-hidden="true">&times;</span>
-      <span class="sr-only">Close</span>
-    </button>
-    <%= raw(messages)%>
-  </div>
 
+<div class="alert alert-danger alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert">
+    <span aria-hidden="true">&times;</span>
+    <span class="sr-only">Close</span>
+  </button>
+  <%#= raw(messages)%>
 </div>
-<% end %>
+
 <div class="row">
   <div class="col-md-12 col-sm-12">
     <ul class="nav nav-tabs">
