--- a/app/views/conceptos/index.html.erb
+++ b/app/views/conceptos/index.html.erb
@@ -15,6 +15,7 @@
           <tr>
             <th class= "actions">Nombre</th>
             <th class= "actions">Formula</th>
+            <th class= "actions">Formula Patrono</th>
             <th class= "actions">Modalidad de pago</th>
             <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
@@ -26,7 +27,8 @@
           asignaciones.each do |concepto| %>
           <tr>
             <td><%= concepto.nombre %></td>
-            <td><var><%= concepto.formula %></var></td>
+            <td><var><%= concepto.formulas.last.empleado %></var></td>
+              <td><var><%= concepto.formulas.last.patrono %></var></td>
             <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
             <td>
               <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
