--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -13,6 +13,7 @@
         <thead>
           <tr>
             <th class= "actions" ><%=t("nombre")%></th>
+            <th class= "actions" >Dependencia</th>
             <th class= "actions" >Personas</th>
             <th  class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
@@ -22,6 +23,7 @@
           <% @departamentos.each do |departamento| %>
           <tr>
             <td><%= departamento.nombre %></td>
+            <td><%= departamento.dependencia.nombre %></td>
             <td><%=Cargo.where("departamento_id=#{departamento.id} and disponible=false").length %></td>
             <td>
               <%= render 'layouts/actions', :x => Departamento, :y => edit_departamento_path(departamento), :z =>departamento %>
