--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= render 'layouts/nuevo', :msg => "Nuevo dependencia", :path=>new_dependencia_path ,:x =>Dependencia %>
+  <%= render 'layouts/nuevo', :msg => "Nueva dependencia", :path=>new_dependencia_path ,:x =>Dependencia %>
 
     <h1>Dependencias</h1>
 </div>
@@ -12,7 +12,7 @@
             <table class="table table-hover table-bordered table-condensed table-striped">
                 <thead>
                     <tr>
-                        <th>Nombre</th>
+                        <th class= "actions">Nombre</th>
                         <th class="actions" style="width: 100px;">Acciones</th>
                     </tr>
 
