--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -11,7 +11,7 @@
       <%if Tipo.all.length>0%>
         <div class="table-responsive">
 
-            <table class="table table-hover table-bordered table-condensed table-striped" style="font-size:	11px;">
+            <table class="table table-hover table-bordered table-condensed table-striped">
                 <thead>
                     <th class="actions">Nombre</th>
 
