--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -24,7 +24,8 @@
           <td><%= concepto.nombre %></td>
           <td><var><%= concepto.formulas.last.empleado %></var></td>
             <td><var><%= concepto.formulas.last.patrono %></var></td>
-          <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
+          <td><%= $dic["modalidad_de_pago"].key(concepto.modalidad_de_pago )%></td>
+
           <td>
             <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
 
