--- a/app/views/conceptos/show.html.erb
+++ b/app/views/conceptos/show.html.erb
@@ -4,7 +4,7 @@
   <h4><b>Tipo de concepto:</b>
 <%= $dic['tipos_de_conceptos'].key(@concepto.tipo_de_concepto).upcase %>,
     <b>Modalidad de pago:</b>
-    <%= $dic['modos_de_pago'].key(@concepto.modalidad_de_pago).upcase %>,
+    <%= $dic['modalidad_de_pago'].key(@concepto.modalidad_de_pago).upcase %>,
     <b>Condicion para aplicar:</b>
     <%= $dic['condiciones'].key(@concepto.condicion).upcase %>.</h4>
     <h4><b>Nominas en las cuales se aplica: </b>
