--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -160,7 +160,7 @@
 
 <div class="col-sm-8">
 <ul class="list-group">
-  <li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modos_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
+  <li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modalidad_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
   <li class="list-group-item">
     <table class="table table-hover table-condensed">
       <thead>
